--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,137 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-
-        <!-- Mobile & Viewport -->
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#1f3d2b" />
-
-        <!-- SEO -->
-        <title>Casa Garden Homestay, Dehradun | Luxury Peaceful Stay Near Nature</title>
-        <meta
-            name="description"
-            content="Casa Garden Homestay in Dehradun offers a premium, peaceful and family-friendly stay surrounded by nature. Spacious rooms, calm environment, ideal for long stays and relaxed vacations."
-        />
-        <meta name="robots" content="index, follow" />
-
-        <!-- Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-            rel="stylesheet"
-        />
-
-        <!-- Emergent system (DO NOT REMOVE) -->
-        <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script>
-
-        <!-- Visual editor support (kept intact) -->
-        <script>
-            if (window.self !== window.top) {
-                var debugMonitorScript = document.createElement('script');
-                debugMonitorScript.src =
-                    'https://assets.emergent.sh/scripts/debug-monitor.js';
-                document.head.appendChild(debugMonitorScript);
-
-                window.tailwind = window.tailwind || {};
-                tailwind.config = {
-                    corePlugins: { preflight: false },
-                };
-
-                var tailwindScript = document.createElement('script');
-                tailwindScript.src = 'https://cdn.tailwindcss.com';
-                document.head.appendChild(tailwindScript);
-            }
-        </script>
-    </head>
-
-    <body style="margin: 0; font-family: 'Inter', sans-serif;">
-        <noscript>
-            Casa Garden Homestay website requires JavaScript to display content properly.
-        </noscript>
-
-        <!-- React root -->
-        <div id="root"></div>
-
-        <!-- Emergent badge (OPTIONAL: remove later if you want) -->
-        <a
-            id="emergent-badge"
-            target="_blank"
-            href="https://app.emergent.sh/?utm_source=emergent-badge"
-            style="
-                display: inline-flex !important;
-                box-sizing: border-box;
-                width: 178px;
-                height: 40px;
-                padding: 8px 12px;
-                align-items: center !important;
-                gap: 8px;
-                border-radius: 50px !important;
-                background: #000 !important;
-                position: fixed !important;
-                bottom: 20px;
-                right: 20px;
-                text-decoration: none;
-                font-family: Inter, sans-serif !important;
-                font-size: 12px !important;
-                z-index: 9999 !important;
-            "
-        >
-            <p
-                style="
-                    color: #fff !important;
-                    font-size: 13px !important;
-                    font-weight: 600 !important;
-                    margin: 0 !important;
-                "
-            >
-                Built with Emergent
-            </p>
-        </a>
-
-        <!-- Analytics (unchanged, safe) -->
-        <script>
-            !(function (t, e) {
-                var o, n, p, r;
-                e.__SV ||
-                    ((window.posthog = e),
-                    (e._i = []),
-                    (e.init = function (i, s, a) {
-                        function g(t, e) {
-                            var o = e.split('.');
-                            2 == o.length && ((t = t[o[0]]), (e = o[1]));
-                            t[e] = function () {
-                                t.push([e].concat(Array.prototype.slice.call(arguments, 0)));
-                            };
-                        }
-                        p = t.createElement('script');
-                        p.type = 'text/javascript';
-                        p.async = !0;
-                        p.src =
-                            s.api_host.replace('.i.posthog.com', '-assets.i.posthog.com') +
-                            '/static/array.js';
-                        r = t.getElementsByTagName('script')[0];
-                        r.parentNode.insertBefore(p, r);
-
-                        var u = e;
-                        for (
-                            o =
-                                'init capture identify setPersonProperties reset'.split(' ');
-                            n < o.length;
-                            n++
-                        )
-                            g(u, o[n]);
-                        e._i.push([i, s, a]);
-                    }),
-                    (e.__SV = 1));
-            })(document, window.posthog || []);
-            posthog.init(
-                'phc_xAvL2Iq4tFmANRE7kzbKwaSqp1HJjN7x48s3vr0CMjs',
-                {
-                    api_host: 'https://us.i.posthog.com',
-                }
-            );
-        </script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Casa Garden Homestay</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
